# benchmarks

./: .gitignore  README.md
fs-benchmarks/: Cargo.toml  README.md  a.txt  canbench.yml  canbench_results.yml  dfx.json
fs-benchmarks/scripts/: build.sh
fs-benchmarks/src/fs-benchmarks-backend/: Cargo.toml
fs-benchmarks/src/fs-benchmarks-backend/src/: lib.rs
ic-chinook-base/: .gitignore  Cargo.toml  README.md  a.txt  dfx.json  test.sh
ic-chinook-base/scripts/: add_customers.sh  all.sh  bench.sh  build.sh  download_db.sh  fill_data.sh  sample_download.sh  set_page_size.sh  upload_db.sh
ic-chinook-base/src/ic-chinook-base-backend/: Cargo.toml  ic-chinook-base-backend.did
ic-chinook-base/src/ic-chinook-base-backend/src/: lib.rs
ic-rusqlite-large-base/: .gitignore  Cargo.toml  README.md  a.sh  canbench.yml  dfx.json
ic-rusqlite-large-base/scripts/: build.sh
ic-rusqlite-large-base/src/ic-rusqlite-large-base-backend/: Cargo.toml
ic-sqlite-bench/: Cargo.toml  README.md  dfx.json
ic-sqlite-bench/scripts/: build.sh
ic-sqlite-bench/src/ic-sqlite-bench-backend/: Cargo.toml  bench1.sh  bench2.sh
ic-sqlite-bench/src/ic-sqlite-bench-backend/src/: db_setup.rs  lib.rs
polyfill-benchmarks/: Cargo.toml  README.md  canbench.yml  canbench_results.yml  dfx.json
polyfill-benchmarks/src/polyfill-benchmarks-backend/: Cargo.toml
polyfill-benchmarks/src/polyfill-benchmarks-backend/src/: lib.rs
sql-users-orders/: Cargo.toml  README.md  canbench.yml  canbench_results.yml  dfx.json  make_snapshot.sh  test.sh
sql-users-orders/scripts/: build.sh  test.sh
sql-users-orders/src/sql-users-orders-backend/: Cargo.toml  build.rs  sql-users-orders-backend.did
sql-users-orders/src/sql-users-orders-backend/src/: lib.rs
sqlite-vs-btreemap/: Cargo.toml  README.md  canbench_results.csv  canbench_results.yml  canbench_results1.csv  dfx.json
sqlite-vs-btreemap/perf/: perf.repl
sqlite-vs-btreemap/scripts/: build.sh
sqlite-vs-btreemap/src/sqlite-vs-btreemap-backend/: Cargo.toml  sqlite-vs-btreemap-backend.did
sqlite-vs-btreemap/src/sqlite-vs-btreemap-backend/src/: lib.rs
