[package]
name = "fs-benchmarks-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
canbench-rs = "0.1.4"
candid = "0.10.11"
ic-cdk = "0.17.0"
ic-cdk-timers = "0.11"
ic-stable-structures = "0.6.8"

# change to see the performance improvement
stable-fs = "0.8.0"
