[package]
name = "fs-benchmarks-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
canbench-rs = "0.2.1"
candid = "0.10.11"
ic-cdk = "0.18.5"
ic-cdk-timers = "0.12"
ic-stable-structures = "0.7.0"

# change to see the performance improvement
#satble-fs = "0.9.0"
stable-fs = {path = "../../../../stable-fs/stable-fs"}
