[package]
name = "polyfill-benchmarks-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
canbench-rs = "0.2.1"
candid = "0.10"
ic-cdk = "0.18"
ic-stable-structures = "0.7.0"

ic-wasi-polyfill = "0.10.0"

