[package]
name = "sql-users-orders-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
canbench-rs = { version = "0.2.1"}
candid = "0.10"
ic-cdk = "0.18.5"
hex = "0.4.3"
serde = "1.0.164"
serde_json = "1.0.97"

#ic-rusqlite = {version = "0.2.0" }
ic-rusqlite = { path = "../../../../ic-rusqlite"}

[build-dependencies]
glob = "0.3"
env = "1.0.1"
